--- a/4.组件.html
+++ b/4.组件.html
@@ -2,8 +2,153 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>组件</title>
+		<script src="https://cdn.bootcss.com/react/15.4.2/react.min.js"></script>
+		<script src="https://cdn.bootcss.com/react/15.4.2/react-dom.min.js"></script>
+		<script src="https://cdn.bootcss.com/babel-standalone/6.22.1/babel.min.js"></script>
 	</head>
 	<body>
+		<div id="example"></div>
+		<div id="lalala"></div>
+		<div id="fuhe"></div>
 	</body>
+	<script type="text/babel">
+		{/*定义组件
+			封装一个输出 "Hello World！组件" 的组件，组件名为 HelloMessage
+			*/}
+		var HelloMessage = React.createClass({
+			render:function(){
+				return <h1>Hello World！组件</h1>;
+			}
+		});
+		{/*React.createClass 方法用于生成一个组件类 HelloMessage。
+			<HelloMessage /> 实例组件类并输出信息。
+			注意，原生 HTML 元素名以小写字母开头，而自定义的 React 类名以大写字母开头，比如 HelloMessage 不能写成 helloMessage。除此之外还需要注意组件类只能包含一个顶层标签，否则也会报错。
+		*/}
+		ReactDOM.render(
+			<HelloMessage />,
+	        document.getElementById('example')
+		);
+		
+		
+		{/*-----------------------------------------------*/}
+		{/*如果我们需要向组件传递参数，可以使用 this.props 对象*/}
+		var HelloJiang = React.createClass({
+			render:function(){
+				return <h1>Hello {this.props.name}</h1>
+			}
+		});
+		ReactDOM.render(
+		<HelloJiang name="杜拉拉"/>,
+		document.getElementById('lalala')
+		);
+		
+		{/*-----------------------------------------------*/}
+		{/*复合组件    实例中 WebSite 组件使用了 Name 和 Link 组件来输出对应的信息，也就是说 WebSite 拥有 Name 和 Link 的实例*/}
+		 var WebSite = React.createClass({
+      render: function() {
+        return (
+          <div>
+            <Name name={this.props.name} />
+            <Link site={this.props.site} />
+          </div>
+        );
+      }
+    });
+
+    var Name = React.createClass({
+      render: function() {
+        return (
+          <h1>{this.props.name}</h1>
+        );
+      }
+    });
+
+    var Link = React.createClass({
+      render: function() {
+        return (
+          <a href={this.props.site}>
+            {this.props.site}
+          </a>
+        );
+      }
+    });
+		ReactDOM.render(
+		<WebSite name="啦啦啦菜鸟教程" site="http://www.runoob.com" />,
+		document.getElementById('fuhe')
+		);
+	</script>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
